src/objects/PCTM__Territory_Management__c.object
<CustomObject>
    <fields>
        <fullName>PCTM__Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Territory Managements</relationshipLabel>
        <relationshipName>Territory_Managements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCTM__Map_Coordinates__c</fullName>
        <label>Map Coordinates</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>PCTM__Territory_Coordinates__c</fullName>
        <label>Territory Coordinates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PCTM__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Territory_Managements</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Territory Management</label>
    <listViews>
        <fullName>PCTM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Territory Management Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>